--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link href="/dist/output.css" rel="stylesheet">
+    <!-- index.html -->
+    <script src="https://cdn.jsdelivr.net/npm/tracking/build/tracking-min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quantum Flappy Face</title>
   </head>
